draft fix sonarlint PdfPKCS7.java